added user ui